--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
-    "langchain": "^0.0.127",    "next-cloudinary": "^4.18.0",
-
+    "langchain": "^0.0.127",
     "lucide-react": "^0.263.0",
+    "next": "^13.4.19",
+    "next-cloudinary": "^4.18.0",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.2",
