--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /package-lock.json
 /README.md
 /stripe.exe
-/env
+/.env/
 
 # testing
 /coverage
@@ -18,6 +18,7 @@
 
 # production
 /build
+/companions
 
 # misc
 .DS_Store
